fixed alignment of english nav

--- a/src/assets/toolkit/styles/6-components/navigation/_components.horizontal-nav.scss
+++ b/src/assets/toolkit/styles/6-components/navigation/_components.horizontal-nav.scss
@@ -152,6 +152,7 @@ body#hubv4 {
         > a {
           padding-bottom: 10px;
           padding-top: 10px;
+          align-self: center;
           .tereo-title {
             display: block;
           }
